# sc-claude-code-files

./: CLAUDE.md  README.md  pyproject.toml  query-flow-diagram.md
backend/: ai_generator.py  search_tools.py
backend/tests/: README.md  __init__.py  conftest.py  test_ai_generator.py  test_api_endpoints.py  test_rag_system.py  test_requirements.txt  test_search_tools.py  test_vector_store.py
frontend/: index.html  script.js  style.css
scripts/: __init__.py  fix_quality.py  quality_check.py
